# MultimediaSchool_lecktion1

./: LICENSE
test1_cmakeintro/: CMakeLists.txt  main.cpp
test2_crosscompile/: CMakeLists.txt  Toolchain-lin32.cmake  Toolchain-lin64.cmake  Toolchain-win64.cmake  main.cpp  readme.txt
test3_preprocess/: CMakeLists.txt  Toolchain-win32.cmake  main.cpp
test4_subprojects/: CMakeLists.txt
test4_subprojects/lib1/: CMakeLists.txt  lib1.cpp  lib1.hpp
test4_subprojects/lib2/: CMakeLists.txt  lib2.cpp  lib2.hpp
test4_subprojects/src/: CMakeLists.txt  main.cpp
test5_ext_lib/: CMakeLists.txt  readme.txt
test5_ext_lib/include/: ext_lib.hpp
test5_ext_lib/src/: ext_lib.cpp
test5_extproject/: CMakeLists.txt
test5_extproject/src/: CMakeLists.txt  main.cpp
test6_thread/src/: CMakeLists.txt  main.cpp
test7_conditionvariable/src/: CMakeLists.txt  main.cpp
